src/objects/OAuthApp_pbi__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorization URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_URI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resource URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Expires_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Token Expires On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuthApp_pbi</label>
</CustomObject>